[package]
name = "Rust_Site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = {version ="1.1.0",features=["v4"]}
serde = {version ="1.0.137",features=["derive"]}
aws-config = "0.12.0"
aws-sdk-dynamodb = "0.12.0"
env_logger = "0.9.0"
log = "0.4.17"
strum_macros = "0.24.0"
strum = {version ="0.24.0",features=["derive"]}
derive_more = "0.99.17"